--- a/.github/workflows/DeploySurge.yml
+++ b/.github/workflows/DeploySurge.yml
@@ -42,4 +42,4 @@ jobs:
         run: npm install --global surge
         
       - name: Deploy to Surge
-        run: surge ./build myReactAppByMMA.surge.sh --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build myfirstprogectbymmali.surge.sh --token ${{secrets.SURGE_TOKEN}}
